--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -40,7 +40,7 @@
   "Ounce": "Ounce",
   "Pound": "Pound",
   "Gram": "Gram",
-  "Kilogram": "Kilogram",
+  "Kilogram": "Kilo",
   "Cup": "Cup",
   "Gallon": "Gallon",
   "Millilitre": "Millilitre",
@@ -78,65 +78,65 @@
   "medium": "medium",
   "large": "large",
   "Start adding your recipes!": "Start adding your recipes!",
-  "Use the plus button to add one": "Use the plus button to add one",
-  "Use the pencil button to add some ingredients": "Use the pencil button to add some ingredients",
-  "Use the pencil button to add some instructions": "Use the pencil button to add some instructions",
-  "Use the pencil button to add some combinations": "Use the pencil button to add some combinations",
-  "Use the pencil button to add some notes": "Use the pencil button to add some notes",
+  "Use the plus button to add one": "Use the + button to add one",
+  "Use the pencil button to add some ingredients": "Use the ✏ button to add ingredients",
+  "Use the pencil button to add some instructions": "Use the ✏ button to add instructions",
+  "Use the pencil button to add some combinations": "Use the ✏ button to add combinations",
+  "Use the pencil button to add some notes": "Use the ✏ button to add notes",
   "All done!": "All done!",
-  "Recipes you mark as try later will be listed here": "Recipes you mark as try later will be listed here",
+  "Recipes you mark as try later will be listed here": "Recipes you want to try later are listed here",
   "No favourites yet": "No favourites yet",
-  "Recipes you mark as favourite will be listed here": "Recipes you mark as favourite will be listed here",
-  "Category looks empty": "Category looks empty",
+  "Recipes you mark as favourite will be listed here": "Favourite recipes to see them here",
+  "Category looks empty": "Add categories to see them here",
   "No recipes found": "No recipes found",
-  "Your search did not match any recipes": "Your search did not match any recipes",
-  "Your search did not match any recipes in this category": "Your search did not match any recipes in this category",
-  "Your search did not match any recipes in your favourites": "Your search did not match any recipes in your favourites",
-  "Your search did not match any recipes in your try later list": "Your search did not match any recipes in your try later list",
+  "Your search did not match any recipes": "Could not find any such recipes",
+  "Your search did not match any recipes in this category": "Could not find any such recipes in that category",
+  "Your search did not match any recipes in your favourites": "Could not find that recipe among your favourites",
+  "Your search did not match any recipes in your try later list": "Could not find that dish in the try later list",
   "Interface": "Interface",
-  "App language": "App language",
-  "System default": "System default",
+  "App language": "Language",
+  "System default": "System",
   "Theme": "Theme",
   "Light": "Light",
   "Dark": "Dark",
   "Database": "Database",
   "Export a full backup": "Export a full backup",
-  "Generates a zip file that contains all your data. This file can be imported back.": "Generates a zip file that contains all your data. This file can be imported back.",
+  "Generates a zip file that contains all your data. This file can be imported back.": "Generates a ZIP file containing all your data that can be imported.",
   "Import from backup": "Import from backup",
   "Supports full backups exported by this app": "Supports full backups exported by this app",
   "Version": "Version",
   "Join the Telegram group": "Join the Telegram group",
   "for reporting issues, suggestions and feedback": "for reporting issues, suggestions and feedback",
   "Author": "Author",
-  "Vishnu Raghav B": "Vishnu Raghav B",
+  "Vishnu Raghav B": "Vishnu Raghav B.",
   "New recipe": "New recipe",
   "Edit recipe": "Edit recipe",
   "Title": "Title",
   "Category": "Category",
-  "Preparation time": "Preparation time",
+  "Preparation time": "Prep time",
   "Cooking time": "Cooking time",
   "Yield quantity": "Yield quantity",
   "Yield measured in": "Yield measured in",
   "Ingredient": "Ingredient",
   "Ingredients": "Ingredients",
-  "ADD INGREDIENT": "ADD INGREDIENT",
+  "ADD INGREDIENT": "Add Ingredient",
   "Instruction": "Instruction",
   "Instructions": "Instructions",
-  "ADD STEP": "ADD STEP",
+  "ADD STEP": "Add Step",
   "Combinations": "Combinations",
-  "ADD COMBINATION": "ADD COMBINATION",
+  "ADD COMBINATION": "Add Combination",
   "Note": "Note",
   "Notes": "Notes",
-  "ADD NOTE": "ADD NOTE",
+  "ADD NOTE": "Add Note",
   "Item": "Item",
   "Step": "Step",
   "Note": "Note",
   "Sort by": "Sort by",
-  "CANCEL": "CANCEL",
-  "REMOVE": "REMOVE",
+  "CANCEL": "Cancel",
+  "REMOVE": "Remove",
   "ADD": "ADD",
   "Select a recipe": "Select a recipe",
-  "Nothing here! Add some recipes and try again.": "Nothing here! Add some recipes and try again.",
+  "Nothing here! Add some recipes and try again.": "Add recipes to see them here.",
   "My Healthy Recipe": "My Healthy Recipe",
   "hr": "hr",
   "min": "min",
@@ -144,30 +144,30 @@
   "Recipe": "Recipe",
   "Overview": "Overview",
   "Share": "Share",
-  "ADD NEW": "ADD NEW",
-  "SET": "SET",
-  "Restart required": "Restart required",
-  "RESTART": "RESTART",
-  "EnRecipes needs to be restarted for the theme change to take effect.": "EnRecipes needs to be restarted for the theme change to take effect.",
-  "EnRecipes needs to be restarted for the app language to take effect.": "EnRecipes needs to be restarted for the app language to take effect.",
+  "ADD NEW": "Add New",
+  "SET": "Set",
+  "Restart required": "App restart required",
+  "RESTART": "Restart app",
+  "EnRecipes needs to be restarted for the theme change to take effect.": "Restart EnRecipes to use the new theme.",
+  "EnRecipes needs to be restarted for the app language to take effect.": "Restart EnRecipes to use the new language.",
   "Grant permission": "Grant permission",
-  "EnRecipes requires storage permission in order to import your data from a previous backup.": "EnRecipes requires storage permission in order to import your data from a previous backup.",
-  "NOT NOW": "NOT NOW",
-  "CONTINUE": "CONTINUE",
-  "EnRecipes requires storage permission in order to backup your data to this device.": "EnRecipes requires storage permission in order to backup your data to this device.",
-  "Add at least one recipe to perform a backup": "Add at least one recipe to perform a backup",
-  "Added to Favourites": "Added to Favourites",
-  "Removed from Favourites": "Removed from Favourites",
-  "Added to Try Later": "Added to Try Later",
-  "Removed from Try Later": "Removed from Try Later",
+  "EnRecipes requires storage permission in order to import your data from a previous backup.": "Grant storage permission to import your data from a previous backup.",
+  "NOT NOW": "Not Now",
+  "CONTINUE": "Continue",
+  "EnRecipes requires storage permission in order to backup your data to this device.": "Grant storage permission to back up EnRecipe data to the device.",
+  "Add at least one recipe to perform a backup": "Add a recipe to perform a backup first",
+  "Added to Favourites": "Favourited",
+  "Removed from Favourites": "Removed as favourite",
+  "Added to Try Later": "Will try later",
+  "Removed from Try Later": "Will not try later",
   "Delete recipe?": "Delete recipe?",
-  "DELETE": "DELETE",
-  "Are you sure you want to delete the recipe": "Are you sure you want to delete the recipe",
+  "DELETE": "Delete",
+  "Are you sure you want to delete the recipe": "Really delete this recipe?",
   "Search": "Search",
   "Unsaved changes": "Unsaved changes",
-  "Are you sure you want to discard unsaved changes to this recipe?": "Are you sure you want to discard unsaved changes to this recipe?",
-  "DISCARD": "DISCARD",
-  "KEEP EDITING": "KEEP EDITING",
+  "Are you sure you want to discard unsaved changes to this recipe?": "Discard all unsaved changes to this recipe?",
+  "DISCARD": "Discard",
+  "KEEP EDITING": "Keep Editing",
   "Remove ingredient?": "Remove ingredient?",
   "Remove instruction?": "Remove instruction?",
   "Remove combination?": "Remove combination?",
@@ -175,9 +175,9 @@
   "New yield unit": "New yield unit",
   "New category": "New category",
   "Required": "Required",
-  "EnRecipes requires storage permission in order to set recipe photo.": "EnRecipes requires storage permission in order to set recipe photo.",
+  "EnRecipes requires storage permission in order to set recipe photo.": "Grant storage permission to save a recipe photo.",
   "Recipe photo": "Recipe photo",
-  "REPLACE PHOTO": "REPLACE PHOTO",
+  "REPLACE PHOTO": "Replace Photo",
   "Crop photo": "Crop photo",
   "breakfast": "breakfast",
   "lunch": "lunch",
@@ -189,13 +189,13 @@
   "days ago": "days ago",
   "weeks ago": "weeks ago",
   "months ago": "months ago",
-  "long time ago": "long time ago",
-  "Verifying...": "Verifying...",
-  "Import successful": "Import successful",
+  "long time ago": "a long time ago",
+  "Verifying...": "Verifying…",
+  "Import successful": "Imported",
   "Permission denied": "Permission denied",
-  "Shared via EnRecipes. Get it on Play Store or F-Droid.": "Shared via EnRecipes. Get it on Play Store or F-Droid.",
+  "Shared via EnRecipes. Get it on Play Store or F-Droid.": "Shared via EnRecipes. Get it on F-Droid, IzzyOnDroid or the Play Store.",
   "Contributors": "Contributors",
-  "Translator": "Translator",
+  "Translator": "Translators",
   "View on GitHub": "View on GitHub",
   "Privacy policy": "Privacy policy",
   "User guide": "User guide",
@@ -203,14 +203,14 @@
   "Shake to view random recipe": "Shake to view random recipe",
   "Helps you choose what to cook when you can't decide": "Helps you choose what to cook when you can't decide",
   "Reset": "Reset",
-  "Resetting a list will NOT delete your existing entries but only restores the deleted default entries.": "Resetting a list will NOT delete your existing entries but only restores the deleted default entries.",
+  "Resetting a list will NOT delete your existing entries but only restores the deleted default entries.": "Resetting lists only restores deleted default entries. Existing entries are not deleted.",
   "Reset cuisines list": "Reset cuisines list",
   "Reset categories list": "Reset categories list",
   "Reset yield units list": "Reset yield units list",
   "Reset units list": "Reset units list",
-  "Reset successful": "Reset successful",
+  "Reset successful": "Unit list reset",
   "Recipe not found": "Recipe not found",
-  "Your search did not match any recipes in the filtered result": "Your search did not match any recipes in the filtered result",
+  "Your search did not match any recipes in the filtered result": "Could not find any such recipe.",
   "Quickest first": "Quickest first",
   "Slowest first": "Slowest first",
   "Rating": "Rating",
@@ -228,7 +228,7 @@
   "Remove yield unit?": "Remove yield unit?",
   "Remove unit?": "Remove unit?",
   "Units": "Units",
-  "Are you sure you want to remove": "Are you sure you want to remove",
+  "Are you sure you want to remove": "Really remove",
   "Cuisine": "Cuisine",
   "Cuisines": "Cuisines",
   "All Cuisines": "All Cuisines",
@@ -282,8 +282,8 @@
   "Remove recipe from dinner?": "Remove recipe from dinner?",
   "Remove recipe from snacks?": "Remove recipe from snacks?",
   "Import failed": "Import failed",
-  "Backup file is incorrect or corrupt.": "Backup file is incorrect or corrupt.",
-  "Backup file seems empty.": "Backup file seems empty.",
-  "Backup file has been modified externally.": "Backup file has been modified externally.",
+  "Backup file is incorrect or corrupt.": "Malformed or corrupt backup file.",
+  "Backup file seems empty.": "Empty backup file.",
+  "Backup file has been modified externally.": "Externally modified backup file.",
   "Invalid file:": "Invalid file:"
 }
