--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -101,7 +101,7 @@
   "Dark": "Dark",
   "Database": "Database",
   "Export a full backup": "Export a full backup",
-  "Generates a zip file that contains all your data. This file can be imported back.": "Generates a ZIP file containing all your data that can be imported.",
+  "Generates a zip file that contains all your data. This file can be imported back.": "Generates a ZIP file of all your data you can import elsewhere.",
   "Import from backup": "Import from backup",
   "Supports full backups exported by this app": "Supports full backups exported by this app",
   "Version": "Version",
